testdata/corset/valid/basic_04.lisp
(defcolumns (X :i16) (Y :i16))
(defconstraint c1 () (== 0 (* X Y)))
(defconstraint c2 () (== 0 (* Y X)))
(defconstraint c3 () (∨ (== 0 X) (== 0 Y)))
(defconstraint c4 () (∨ (== 0 X) (== 0 Y)))
