testdata/corset/invalid/logic_invalid_01.lisp
;;error:5:3-6:incorrect number of arguments
;;error:7:3-6:incorrect number of arguments
(defcolumns (X :i16))
(defconstraint c1 ()
  (∨))
(defconstraint c2 ()
  (∧))
